--- a/app/src/main/res/values-night/color.xml
+++ b/app/src/main/res/values-night/color.xml
@@ -5,8 +5,8 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="blue">#FF3700B3</color>
+    <color name="white">#FF000000</color>
+    <color name="blue">#0057B7</color>
     <color name="yellow">#FFCC00</color>
-    <color name="white">#FFFFFF</color>
+    <color name="black">#FFFFFF</color>
 </resources>
