--- a/app/src/main/res/values-night/color.xml
+++ b/app/src/main/res/values-night/color.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="white">#FF000000</color>
     <color name="blue">#0057B7</color>
-    <color name="yellow">#FFCC00</color>
+    <color name="yellow">#FFC107</color>
     <color name="black">#FFFFFF</color>
 </resources>
